--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello World</h1>
+    <h1>Tweets</h1>
+    {% if tweets %}
+    
+    {% for tweet in tweets %}
+    <div class="container alert alert-dark" role="alert">
+        {{tweet}}    
+    </div>
+    <br><br>
+    {% endfor %}
+
+    {% endif %}
 {% endblock content %}
