--- a/templates/tweet/profile.html
+++ b/templates/tweet/profile.html
@@ -7,9 +7,21 @@
         <div class="row">
             <div class="col-8">
                 <h1>{{profiles.user.username|upper}}'s Profile</h1>
+                <br>
+                {% if tweets %}
+    
+                {% for tweet in tweets %}
+                    <div class="alert alert-dark" role="alert">
+                        {{tweet}}    
+                    </div>
+                    <br><br>
+                {% endfor %}
+
+                {% endif %}
             </div>
 
             <div class="col-4">
+                <br><br><br>
                 <div class="card">
                     <div class="card-header">
                         Follows
