--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col-8">
     <h1>Tweets</h1>
     {% if tweets %}
     
     {% for tweet in tweets %}
-    <div class="container alert alert-dark" role="alert">
+    <div class="alert alert-dark" role="alert">
         {{tweet}}    
     </div>
     <br><br>
     {% endfor %}
-
+</div>
+<div class="col-4">
+    <br><br><br>
+    <form>
+        
+        <button type="submit" class="btn btn-secondary">Tweet</button>
+    </form>
+</div>
     {% endif %}
 {% endblock content %}
