--- a/templates/home.html
+++ b/templates/home.html
@@ -5,22 +5,31 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-8">
-    <h1>Tweets</h1>
-    {% if tweets %}
-    
-    {% for tweet in tweets %}
-    <div class="alert alert-dark" role="alert">
-        {{tweet}}    
+            <h1>Tweets</h1>
+            {% if tweets %}
+            
+            {% for tweet in tweets %}
+            <div class="alert alert-dark" role="alert">
+                {{tweet.body}}<br>
+                <small class="text-muted">
+                    ({{tweet.created_at}}) By
+                    @{{tweet.user.username}}
+                </small>    
+            </div>
+            <br><br>
+            {% endfor %}
+        </div>
+        <div class="col-4">
+            <br><br>
+            {% if form %}
+            <form action = {% url 'home' %} method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button type="submit" class="btn btn-secondary">Tweet</button>
+            </form>
+            {% endif %}
+        </div>
+            {% endif %}
     </div>
-    <br><br>
-    {% endfor %}
 </div>
-<div class="col-4">
-    <br><br><br>
-    <form>
-        
-        <button type="submit" class="btn btn-secondary">Tweet</button>
-    </form>
-</div>
-    {% endif %}
 {% endblock content %}
