--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
         <div class="col-4">
             <br><br>
             {% if form %}
-            <form action = {% url 'home' %} method="POST">
+            <form method = "POST" action = {% url 'home' %}>
                 {% csrf_token %}
                 {{form.as_p}}
                 <button type="submit" class="btn btn-secondary">Tweet</button>
