--- a/templates/home.html
+++ b/templates/home.html
@@ -6,21 +6,21 @@
     <div class="row">
         <div class="col-8">
             <h1>Tweets</h1>
+            <br>
             {% if tweets %}
-            
             {% for tweet in tweets %}
             <div class="alert alert-dark" role="alert">
                 {{tweet.body}}<br>
                 <small class="text-muted">
                     ({{tweet.created_at}}) By
-                    @{{tweet.user.username}}
+                    <a class="text-muted text-decoration-none" href="{% url 'profile' tweet.user.id %}"><b>@{{tweet.user.username}}</b></a>
                 </small>    
             </div>
             <br><br>
             {% endfor %}
         </div>
         <div class="col-4">
-            <br><br>
+            <br><br><br>
             {% if form %}
             <form method = "POST" action = {% url 'home' %}>
                 {% csrf_token %}
