--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,14 @@
     <form method="POST" action={% url 'login' %}>
         {% csrf_token %}
         <div class="mb-3">
-          <input type="text" class="form-control" name="username" placeholder="Enter your username">
+            <label>
+                <input type="text" class="form-control" name="username" placeholder="Enter your username">
+            </label>
         </div>
         <div class="mb-3">
-          <input type="password" class="form-control" name="password" placeholder="Enter your Password">
+            <label>
+                <input type="password" class="form-control" name="password" placeholder="Enter your Password">
+            </label>
         </div>
         <br>
         <button type="submit" class="btn btn-secondary">Submit</button>
