--- a/templates/tweet/profile_list.html
+++ b/templates/tweet/profile_list.html
@@ -7,7 +7,11 @@
 <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="{% static 'images/default_profile_pic.png' %}" class="img-fluid rounded-start" alt="...">
+        {% if profile.profile_image %}
+          <img src="{{profile.profile_image.url}}" alt="{{profile.user.username}}" width="200" height="200" class="img-fluid rounded-start">
+        {% else %}
+          <img src="{% static 'images/default_profile_pic.png' %}" class="img-fluid rounded-start" alt="Default profile pic">
+        {% endif %}
       </div>
       <div class="col-md-8">
         <div class="card-body">
