--- a/templates/tweet/update_user.html
+++ b/templates/tweet/update_user.html
@@ -4,9 +4,10 @@
 <div class="col-md-6 offset-md-3">
     <h1>Update Profile</h1>
     <br>
-    <form method="POST">
+    <form method="POST" enctype = "multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ user_form.as_p }}
+        {{profile_form.as_p}}
         <br>
         <button type="submit" class="btn btn-secondary">Update Profile</button>
     </form>
