--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">Tweets</a>
@@ -26,10 +27,24 @@
           </li>
           {% endif %}
         </ul>
-        <form class="d-flex" role="search">
+        <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
+        {% if user.is_authenticated %}
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-link navbar-brand">
+              
+              <a href="{% url 'profile' request.user.id %}">
+                {% if user.profile.profile_image %}
+                <img src="{{user.profile.profile_image.url}}" alt="" class="rounded-circle" width=40>
+                {% else %}
+                <img src="{% static 'images/default_profile_pic.png' %}" alt="" class="rounded-circle" width=40>
+                {% endif %}
+              </a>              
+            </li>
+          </ul>
+        {% endif %}
       </div>
     </div>
   </nav>
